--- a/depel.html
+++ b/depel.html
@@ -17,15 +17,20 @@
       <div class="item"><b>Мужская стрижка</b> Топ</div>
 
       <div class="price">4000</div>
+      <div class="item"><b>Камуфляж</b> бороды</div>
+      <div class="price">1000</div>
+
+      <div class="item"><b>Камуфляж</b> седины</div>
+      <div class="price">2200</div>
       <div class="item"><b>Маникюр</b> Мужской</div>
       <div class="price">1500</div>
 
       <div class="item"><b>Покрытие</b> Матовое для мужчин</div>
       <div class="price">100</div>
       <div class="item"><b>Педикюр</b> Голден Тресс</div>
-      <div class="price">3400 руб</div>
+      <div class="price">3400</div>
       <div class="item"><b>Педикюр Экспресс </b> (только пальчики)</div>
-      <div class="price">2000 руб</div>
+      <div class="price">2000</div>
       <div class="item"><b>Классическое SPA всего тела</b> 1.5ч</div>
       <div class="price">4000</div>
       <div class="item"><b>Классическое SPA всего тела</b> 1 ч</div>
@@ -64,6 +69,7 @@
         <div><i> механическая чистка</i></div>
         <div><i>маска успокаивающая</i></div>
       </div>
+      <div class="price">6000</div>
     </div>
     <script></script>
   </body>
