--- a/face.html
+++ b/face.html
@@ -8,17 +8,17 @@
     <title>Face</title>
   </head>
   <body>
-    <h1 class="header">Сияние и гладкость кожи</h1>
+    <h1 class="price-header">Сияние и гладкость кожи</h1>
 
-    <div class="image__price">
+    <!-- <div class="image__price">
       <img src="./public/_ (4).jpeg" alt="" />
-    </div>
+    </div> -->
 
     <div class="price-list">
       <div class="item"><b>Массаж </b>лица</div>
-      <div class="price">3500 руб</div>
+      <div class="price">3500</div>
       <div class="item"><b>Ингибитор жира</b> лицо</div>
-      <div class="price">1000 руб</div>
+      <div class="price">1000</div>
       <div class="item">
         <b>Чистка лица</b> Ультразвуковая (90 мин)
         <div><i>демакияж</i></div>
