--- a/hair.html
+++ b/hair.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <h1 class="price-header">Шикарные и здоровые волосы</h1>
-    <div class="image__price">
+    <!-- <div class="image__price">
       <img
         src="./public/Lyndall Jarvis by Olivier999 on DeviantArt.jpeg"
         width="100%"
         alt="" />
-    </div>
+    </div> -->
     <div class="price-list">
       <div class="item"><b>Стрижка женская</b> (мытье+укладка) Топ</div>
       <div class="price">8000</div>
@@ -131,12 +131,6 @@
 
       <div class="item"><b>Окрашивание волос в один тон</b> От 45см</div>
       <div class="price">от 6750</div>
-
-      <div class="item"><b>Камуфляж</b> бороды</div>
-      <div class="price">1000</div>
-
-      <div class="item"><b>Камуфляж</b> седины</div>
-      <div class="price">2200</div>
 
       <div class="item"><b>Мелирование на фольгу</b> Частично (2-10 пряди)</div>
       <div class="price">от 2800</div>
