--- a/makeup.html
+++ b/makeup.html
@@ -7,30 +7,43 @@
     <link rel="stylesheet" href="./price.css" />
     <title>Make up</title>
   </head>
+  <style></style>
   <body>
     <h1 class="price-header">Стиль без повода</h1>
-    <div class="image__price">
+    <!-- <div class="image__price">
       <img src="./public/_ (6).jpeg" alt="" />
-    </div>
+    </div> -->
     <div class="price-list">
       <div class="item"><b>Макияж</b> дневной</div>
-      <div class="price">3000 руб</div>
+      <div class="price">3000</div>
       <div class="item"><b>Макияж</b> вечерний</div>
-      <div class="price">3500 руб</div>
+      <div class="price">3500</div>
       <div class="item"><b>Ламинирование </b>ресниц</div>
-      <div class="price">4000 руб</div>
+      <div class="price">4000</div>
 
       <div class="item"><b>Окрашивание </b>ресниц (краска)</div>
-      <div class="price">500 руб</div>
+      <div class="price">500</div>
 
       <div class="item"><b>Окрашивание </b>бровей (хна)</div>
-      <div class="price">600 руб</div>
+      <div class="price">600</div>
 
       <div class="item"><b>Коррекция</b> бровей</div>
-      <div class="price">600 руб</div>
+      <div class="price">600</div>
 
       <div class="item"><b>Форма</b> бровей</div>
-      <div class="price">600 руб</div>
+      <div class="price">600</div>
+
+      <div class="item"><b>Перманентный макияж </b>бровей</div>
+      <div class="price">7000</div>
+
+      <div class="item">
+        <b>Перекрытие старого перманента </b>после консультации
+      </div>
+      <div class="price">+2000</div>
+
+      <div class="item"><b>Перманентный макияж</b> межресничка</div>
+      <div class="price">4000</div>
     </div>
   </body>
+  <script></script>
 </html>
