--- a/nail.html
+++ b/nail.html
@@ -18,27 +18,27 @@
     </div>
     <div class="price-list">
       <div class="item"><b>Педикюр</b> Голден Тресс</div>
-      <div class="price">3400 руб</div>
+      <div class="price">3400</div>
       <div class="item"><b>Педикюр Экспресс </b> (только пальчики)</div>
-      <div class="price">2000 руб</div>
+      <div class="price">2000</div>
       <div class="item"><b>Снятие</b> Лак</div>
-      <div class="price">300 руб</div>
+      <div class="price">300</div>
       <div class="item"><b>Снятие</b> Гель-лак</div>
-      <div class="price">300 руб</div>
+      <div class="price">300</div>
       <div class="item"><b>Покрытие</b> Лак</div>
-      <div class="price">500 руб</div>
+      <div class="price">500</div>
 
       <div class="item"><b>Покрытие</b> Лечебный лак</div>
-      <div class="price">500 руб</div>
+      <div class="price">500</div>
 
       <div class="item"><b>Покрытие</b> Гель-лак</div>
-      <div class="price">1400 руб</div>
+      <div class="price">1400</div>
 
       <div class="item"><b>Покрытие</b> Френч</div>
-      <div class="price">1700 руб</div>
+      <div class="price">1700</div>
 
       <div class="item"><b>Ремонт</b> Натурального ногтя</div>
-      <div class="price">500 руб</div>
+      <div class="price">500</div>
 
       <div class="item"><b>Ремонт</b> Наращённого ногтя</div>
       <div class="price">500</div>
@@ -73,7 +73,7 @@
       <div class="item"><b>Укрепление</b> натуральных ногтей Биогель</div>
       <div class="price">500</div>
 
-      <div class="item"><b>Укрепление</b>> натуральных ногтей База</div>
+      <div class="item"><b>Укрепление</b> натуральных ногтей База</div>
       <div class="price">500</div>
 
       <div class="item"><b>Укрепление</b> натуральных ногтей Акрил</div>
