--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
           <a href="https://vk.com/magiskus">
             <img
-              src="./public/вк черныйv2?.jpeg"
+              src="./public/vkblack.jpeg"
               alt="VKontakte"
               class="social-icon" />
           </a>
