--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
           <button class="feed-btn">
             <a
               href="https://yandex.ru/maps/org/magiya_iskusstva/1006427653/reviews/?ll=37.281546%2C55.685137&z=14"
-              >Оставить отзыв Яндекс</a
+              >Отзыв Яндекс</a
             >
           </button>
           <button class="feed-btn2">
             <a
               href="https://zoon.ru/msk/beauty/salon_krasoty_magiya_iskusstva/#reviews"
-              >Оставить отзыв Zoon</a
+              >Отзыв Zoon</a
             >
           </button>
         </form>
@@ -276,8 +276,6 @@
         <img
           class="mapp-click"
           src="./public/Снимок экрана 2024-02-01 в 15.22.46.png"
-          width="700px"
-          height="600px"
           alt="mapp" />
       </div>
     </footer>
