--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <section class="section container">
       <div class="grid">
         <a class="item item__container" href="hair.html">
-          <img class="item__details" src="./public/blond.jpg " alt="" />
+          <img class="item__details" src="./blond.jpg " alt="" />
           <div class="caption">Волосы форма стиль цвет</div>
         </a>
         <a class="item item__container" href="makeup.html">
@@ -263,6 +263,12 @@
         </p>
       </div>
     </div>
+    <div class="mapp">
+      <img
+        class="mapp-click"
+        src="./public/Снимок экрана 2024-02-01 в 15.22.46.png"
+        alt="mapp" />
+    </div>
     <footer>
       <div class="contact-info">
         <h3>Контакты</h3>
@@ -271,12 +277,6 @@
           +7 (934) 000-0384</a
         >
         <p>График работы: Пн-Вс: 9:00-21:00</p>
-      </div>
-      <div>
-        <img
-          class="mapp-click"
-          src="./public/Снимок экрана 2024-02-01 в 15.22.46.png"
-          alt="mapp" />
       </div>
     </footer>
   </body>
