--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
           <a href="https://vk.com/magiskus">
             <img
-              src="./public/вк черныйv2?.jpeg"
+              src="./public/vkblack.jpeg"
               alt="VKontakte"
               class="social-icon" />
           </a>
@@ -263,8 +263,9 @@
         </p>
       </div>
     </div>
-    <div class="mapp">
+    <div style="max-width: 400px">
       <img
+        style="max-width: 100%"
         class="mapp-click"
         src="./public/Снимок экрана 2024-02-01 в 15.22.46.png"
         alt="mapp" />
