--- a/nail.html
+++ b/nail.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <h1 class="price-header">Аккуратные пальцы</h1>
-    <div class="image__price">
+    <!-- <div class="image__price">
       <img
         src="./public/ФОНЫ _ ВИДЕО _ БЬЮТИ (вдохновение и эстетика).jpeg "
         width="450px"
         height="400px"
         alt="" />
-    </div>
+    </div> -->
     <div class="price-list">
       <div class="item"><b>Педикюр</b> Голден Тресс</div>
       <div class="price">3400</div>
