--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </p>
       </div>
     </div>
-    <div style="max-width: 400px">
+    <div style="margin: 0">
       <img
         style="max-width: 100%"
         class="mapp-click"
