--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </div>
 
     <h2 class="about__title">О Нас</h2>
-    <div class="about-us container">
+    <div class="about-us-container">
       <img
         class="image-us"
         src="./public/Снимок экрана 2024-02-03 в 14.20.12.png"
