--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </div>
     <div style="margin: 0">
       <img
-        style="max-width: 50%"
+        style="max-width: 70%; margin-left: 30px"
         class="mapp-click"
         src="./public/Снимок экрана 2024-02-01 в 15.22.46.png"
         alt="mapp" />
