--- a/index.html
+++ b/index.html
@@ -160,11 +160,7 @@
     </div>
     <div class="fixed-buttons">
       <button class="button">
-        <a
-          class="link-yaclains"
-          href="https://n658782.yclients.com/company/623052/menu?_gl=1*1hdjhbx*_ga*MTg1MjI1OTc3NS4xNzA4ODQ5ODQ5*_ga_P2LM7D8KSM*MTcwODg1MzMwMS4yLjEuMTcwODg1MzMwNC41Ny4wLjA.&_ga=2.199457070.1895848680.1708849849-1852259775.1708849849&o="
-          >Онлайн запись</a
-        >
+        <a class="link-yaclains">Онлайн запись</a>
       </button>
       <button class="button" id="openModalButton2">Закажи звонок</button>
     </div>
