--- a/makeup.html
+++ b/makeup.html
@@ -18,22 +18,22 @@
       <div class="price">3000</div>
       <div class="item"><b>Макияж</b> вечерний</div>
       <div class="price">3500</div>
-      <div class="item"><b>Ламинирование </b>ресниц</div>
-      <div class="price">4000</div>
+<!--       <div class="item"><b>Ламинирование </b>ресниц</div>
+      <div class="price">4000</div> -->
 
       <div class="item"><b>Окрашивание </b>ресниц (краска)</div>
-      <div class="price">500</div>
+      <div class="price">750</div>
 
       <div class="item"><b>Окрашивание </b>бровей (хна)</div>
-      <div class="price">600</div>
+      <div class="price">750</div>
 
       <div class="item"><b>Коррекция</b> бровей</div>
-      <div class="price">600</div>
+      <div class="price">750</div>
 
-      <div class="item"><b>Форма</b> бровей</div>
-      <div class="price">600</div>
+<!--       <div class="item"><b>Форма</b> бровей</div>
+      <div class="price">600</div> -->
 
-      <div class="item"><b>Перманентный макияж </b>бровей</div>
+<!--       <div class="item"><b>Перманентный макияж </b>бровей</div>
       <div class="price">7000</div>
 
       <div class="item">
@@ -42,7 +42,7 @@
       <div class="price">+2000</div>
 
       <div class="item"><b>Перманентный макияж</b> межресничка</div>
-      <div class="price">4000</div>
+      <div class="price">4000</div> -->
     </div>
   </body>
   <script></script>
