--- a/nail.html
+++ b/nail.html
@@ -19,6 +19,10 @@
     <div class="price-list">
       <div class="item"><b>Педикюр</b> Голден Тресс</div>
       <div class="price">3400</div>
+
+       <div class="item"><b>Педикюр для проблемной стопы</b>Смарт</div>
+      <div class="price">4400</div>
+      
       <div class="item"><b>Педикюр Экспресс </b> (только пальчики)</div>
       <div class="price">2000</div>
       <div class="item"><b>Снятие</b> Лак</div>
