--- a/face.html
+++ b/face.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,7 +14,7 @@
       <img src="./public/_ (4).jpeg" alt="" />
     </div> -->
 
-    <div class="price-list">
+<!--     <div class="price-list">
       <div class="item"><b>Массаж </b>лица</div>
       <div class="price">3500</div>
       <div class="item"><b>Ингибитор жира</b> лицо</div>
@@ -160,5 +160,5 @@
       <div class="item"><b>Спина</b></div>
       <div class="price">2000</div>
     </div>
-  </body>
-</html>
+  </body> -->
+<!-- </html> -->
