--- a/hair.html
+++ b/hair.html
@@ -27,21 +27,37 @@
       <div class="item"><b>Стрижка женская</b> (мытье+укладка)</div>
       <div class="price">3500</div>
 
+        <div class="item"><b>Стрижка женская</b> (мытье+укладка)</div>
+      <div class="price">4000</div>
+
       <div class="item"><b>Стрижка</b> челки</div>
-      <div class="price">1000</div>
+      <div class="price">800</div>
 
       <div class="item"><b>Стрижка детская</b> (до 8 лет)</div>
       <div class="price">1500</div>
+
+       <div class="item"><b>Стрижка детская</b> (до 8 лет)</div>
+      <div class="price">2000</div>
 
       <div class="item"><b>Коррекция стрижки</b> Топ</div>
       <div class="price">4000</div>
 
       <div class="item"><b>Коррекция</b> стрижки</div>
       <div class="price">2200</div>
+
+       <div class="item"><b>Коррекция</b> стрижки</div>
+      <div class="price">2500</div>
+      
       <div class="item">
         <b>Стрижка концов</b> по одной длине (без мытья, утюг, брашинг)
       </div>
       <div class="price">1600</div>
+
+       <div class="item">
+        <b>Стрижка концов</b> по одной длине (без мытья, утюг, брашинг)
+      </div>
+      <div class="price">1800</div>
+      
       <div class="item"><b>Укладка феном </b>Короткие</div>
       <div class="price">4000</div>
 
