--- a/depel.html
+++ b/depel.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -23,9 +23,9 @@
       <div class="item"><b>Камуфляж</b> седины</div>
       <div class="price">2200</div>
       <div class="item"><b>Маникюр</b> Мужской</div>
-      <div class="price">1500</div>
+      <div class="price">1500</div> -->
 
-      <div class="item"><b>Покрытие</b> Матовое для мужчин</div>
+<!--       <div class="item"><b>Покрытие</b> Матовое для мужчин</div>
       <div class="price">100</div>
       <div class="item"><b>Педикюр</b> Голден Тресс</div>
       <div class="price">3400</div>
@@ -43,8 +43,8 @@
         <div><i>маска холодного гидрирования</i></div>
         <div><i>чистка ультразвуковая скрабером</i></div>
         <div><i>маска поросуживающая</i></div>
-      </div>
-      <div class="price">3000</div>
+      </div> -->
+<!--       <div class="price">3000</div>
       <div class="item">
         <b>Чистка лица</b> Атравматическая (90 мин)
         <div><i>демакияж</i></div>
@@ -67,10 +67,10 @@
         <div><i>очищение</i></div>
         <div><i>маска холодного гидрирования</i></div>
         <div><i> механическая чистка</i></div>
-        <div><i>маска успокаивающая</i></div>
-      </div>
+        <div><i>маска успокаивающая</i></div> -->
+<!--       </div>
       <div class="price">6000</div>
     </div>
     <script></script>
   </body>
-</html>
+</html> -->
