Update depel.html now

--- a/depel.html
+++ b/depel.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <h1 class="price-header">Для Мужчин</h1>
+  <!--  <h1 class="price-header">Для Мужчин</h1>
 
     <div class="price-list">
       <div class="item"><b>Мужская</b> стрижка</div>
@@ -71,6 +71,6 @@
 <!--       </div>
       <div class="price">6000</div>
     </div>
-    <script></script>
+    <script></script>-->
   </body>
-</html> -->
+</html>  
