--- a/face.html
+++ b/face.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     <title>Face</title>
   </head>
   <body>
-    <h1 class="price-header">Сияние и гладкость кожи</h1>
+   <!-- <h1 class="price-header">Сияние и гладкость кожи</h1>
 
     <!-- <div class="image__price">
       <img src="./public/_ (4).jpeg" alt="" />
@@ -159,6 +159,6 @@
 
       <div class="item"><b>Спина</b></div>
       <div class="price">2000</div>
-    </div>
-  </body> -->
-<!-- </html> -->
+    </div>-->
+  </body>  
+ </html>  
