Update index.html now

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
     <div class="fixed-buttons">
       <button class="button">
-        <a class="link-yaclains">Онлайн запись</a>
+        <a class="link-yaclains" link='https://yandex.ru/maps/org/magiya_iskusstva/1006427653/?booking%5Bpage%5D=services&booking%5Bpermalink%5D=1006427653&ll=37.281546%2C55.685137&z=15'>Онлайн запись</a>
       </button>
       <button class="button" id="openModalButton2">Закажи звонок</button>
     </div>
