--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       <div class="right-column">
         <div class="contact-info">
           <!-- Иконки социальных сетей -->
-          <a href="https://t.me/magiyaiskusstva">
+          <a href="https://t.me/miiskusstva">
             <img src="./public/телега.png" alt="Telegram" class="social-icon" />
           </a>
 
-          <a href="https://vk.com/magiskus">
+          <a href="https://vk.com/id1023731518">
             <img
               src="./public/vkblack.jpeg"
               alt="VKontakte"
