--- a/face.html
+++ b/face.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!--   <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./price.css" />
     <title>Face</title>
   </head>
-  <body>
+  <body> -->
    <!-- <h1 class="price-header">Сияние и гладкость кожи</h1>
 
     <!-- <div class="image__price">
@@ -160,5 +160,5 @@
       <div class="item"><b>Спина</b></div>
       <div class="price">2000</div>
     </div>-->
-  </body>  
- </html>  
+<!--   </body>  
+ </html>   -->
