--- a/face.html
+++ b/face.html
@@ -1,4 +1,4 @@
-<!--   <!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./price.css" />
     <title>Face</title>
   </head>
-  <body> -->
-   <!-- <h1 class="price-header">Сияние и гладкость кожи</h1>
+  <body> 
+  <h1 class="price-header">Сияние и гладкость кожи</h1>
 
-    <!-- <div class="image__price">
+    <div class="image__price">
       <img src="./public/_ (4).jpeg" alt="" />
-    </div> -->
+    </div>
 
-<!--     <div class="price-list">
+    <div class="price-list">
       <div class="item"><b>Массаж </b>лица</div>
       <div class="price">3500</div>
       <div class="item"><b>Ингибитор жира</b> лицо</div>
@@ -159,6 +159,6 @@
 
       <div class="item"><b>Спина</b></div>
       <div class="price">2000</div>
-    </div>-->
-<!--   </body>  
- </html>   -->
+    </div>
+  </body>  
+ </html>  
