--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="right-column">
         <div class="contact-info">
           <!-- Иконки социальных сетей -->
-          <a href="https://t.me/miiskusstva">
+          <a href="">
             <img src="./public/телега.png" alt="Telegram" class="social-icon" />
           </a>
 
